# src/app/Http/Controllers/Api/User/UserApiController.php
@@ -2,6 +2,8 @@
 
 namespace App\Http\Controllers\Api\User;
 
+use App\Http\Requests\Api\User\UserRegisterValidation;
+use App\Models\Basic\User;
 use App\Services\User\UserService;
 use Illuminate\Http\Request;
 use Illuminate\Http\JsonResponse;
@@ -12,7 +14,7 @@ class UserApiController extends BaseApiController
     /** @var Request */
     private Request $request;
 
-    /** @var UserService  */
+    /** @var UserService */
     private UserService $userService;
 
     /**
@@ -27,29 +29,36 @@ class UserApiController extends BaseApiController
 
     /**
      * @OA\post (
-     * path="/api/user/register",
-     * summary="Registers new user",
-     * description="Registers new user",
-     * tags={"User"},
-     * @OA\RequestBody(
-     *    required=true,
-     *    description="Registers new user",
-     *  @OA\JsonContent(
-     *      @OA\Property(property="mobile", type="string",example="09123456789"),
+     *  path="/api/user/register",
+     *  summary="Registers new user",
+     *  description="Registers new user",
+     *  tags={"User"},
+     *  @OA\RequestBody(
+     *      required=true,
+     *      description="Registers new user",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="first_name", type="string",example="دوا", nullable="true"),
+     *          @OA\Property(property="last_name", type="string",example="لیپا", nullable="true"),
+     *          @OA\Property(property="mobile", type="string",example="09123456789", nullable="false"),
+     *      ),
+     *  ),
+     *  @OA\Response(
+     *      response=200,
+     *      description="success",
+     *      @OA\JsonContent(
+     *          @OA\Property(property="sucess", type="string", example="success"),
+     *      )
+     *  ),
+     *  @OA\Response(
+     *      response=422,
+     *      description="bad request",
      *  ),
      * ),
-     * @OA\Response(
-     *    response=200,
-     *    description="success",
-     *    @OA\JsonContent(
-     *       @OA\Property(property="sucess", type="string", example="success"),
-     *        )
-     *     ),
-     * )
      *
+     * @param UserRegisterValidation $userRegisterValidation
      * @return JsonResponse
      */
-    public function register(): JsonResponse
+    public function register(UserRegisterValidation $userRegisterValidation): JsonResponse
     {
         $data = $this->sanitizeRequestPinData();
 
@@ -64,7 +73,9 @@ class UserApiController extends BaseApiController
     private function sanitizeRequestPinData(): array
     {
         return [
-            'mobile' => $this->request->post('mobile'),
+            User::COLUMN_FIRST_NAME => $this->request->post('first_name'),
+            User::COLUMN_LAST_NAME => $this->request->post('last_name'),
+            User::COLUMN_MOBILE => $this->request->post('mobile'),
         ];
     }
 
